# O957

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  README_DECISIONS.md  _typos.toml  pyproject.toml  requirements.txt
.github/: dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: general_issue.md
.github/workflows/: deptry-check.yaml
assets/: README.md  notes.md
assets/profile_images/: README.md
decision_making/: python_linting.md
decisions/: DECISION_MAKING_README.md  archiving.md  categories.md  contributing_file.md  data_files.md  decision_making.md  discussions.md  github_contribution_file.md  github_dependabot.md  github_issue_prepare_repository.md  glossaries.md  goals.md  issues.md  labels.md  llms.md  measurement.md  memory.md  notation.md  on_off_github.md  poetry.md  precommit.md  problem_solving.md  profile_readme.md  public_profile.md  purpose.md  python_docstrings.md  python_environment.md  python_header.md  python_plotting.md  python_poetry.md  python_typing.md  python_uv.md  quarto.md  readme_general.md  readmes.md  repo_discussions.md  repo_issues.md  repo_labels.md  repo_production.md  repo_productivity.md  (+6 more)
examples/for_decisions/: contributing_files.md
notes/: github_metrics.md  historical_displays.md  varia.md
profile/: historical.md
protocols/: github_dependabot.md  github_issue_prepare_repository.md  latex.md  python_deptry.md  python_radon.md  python_xenon.md
resources/links/: math_self_learning.md
