[project]
name = "afg6k7h4fhy2"
version = "0.0.1"
authors = [
  {name = "AFg6K7h4fhy2", email = "127630341+AFg6K7h4fhy2@users.noreply.github.com"},
]
description = "The author's personal GitHub profile. Contained therein are some resources the author makes use of and decisions that the author has made concerning his use of GitHub. This repository also exists as a place for onlookers to provide the author with feedback."
readme = "README.md"
license = "Apache-2.0"
keywords = ["personal"]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/AFg6K7h4fhy2/AFg6K7h4fhy2"
Issues = "https://github.com/AFg6K7h4fhy2/AFg6K7h4fhy2/issues"
"Author GitHub" = "https://github.com/AFg6K7h4fhy2/"

[project.optional-dependencies]
dev = [
    "altair>=5.5.0",
    "polars>=1.30.0",
]
test = [
    "pytest>=8.4.0",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.deptry]
pep621_dev_dependency_groups = ["dev", "test"]
