[project]
name = "O957"
version = "0.0.1"
authors = [
  {name = "O957", email = "127630341+O957@users.noreply.github.com"},
]
description = "The author's primary node for interfacing with the public and making connections on GitHub."
readme = "README.md"
license = "Apache-2.0"
keywords = ["personal"]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/O957/O957"
Issues = "https://github.com/O957/O957/issues"
"Author GitHub" = "https://github.com/O957/"
